--- a/app/assets/stylesheets/components/pins/_show-pin.scss
+++ b/app/assets/stylesheets/components/pins/_show-pin.scss
@@ -205,3 +205,15 @@
   color: #e60023;
   transform: scaleX(130%) scaleY(110%);
 }
+
+@media screen and (max-width:700px){
+  .pin-show-title {
+   font-size: 16px;
+ }
+  .pin-show-description {
+    font-size: 14px;
+  }
+  .pin-show-board-link {
+    font-size: 14px;
+  }
+}
