--- a/app/assets/stylesheets/components/site/_profile-nav.scss
+++ b/app/assets/stylesheets/components/site/_profile-nav.scss
@@ -216,3 +216,14 @@
    background-color:rgb(255, 255, 255);
    margin: 8px;
 }
+
+@media screen and (max-width:700px){
+ .plus-button-container { 
+    position: absolute;
+    top: 44%;
+    margin-left: 15px;
+  }
+  .profile-btn-container {
+    margin-bottom: 20px;
+  }
+}
