--- a/app/assets/stylesheets/components/site/_profile-nav.scss
+++ b/app/assets/stylesheets/components/site/_profile-nav.scss
@@ -171,6 +171,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  margin-bottom: 18px;
 }
 
 .profile-btn-container button {
